added images and static dir

--- a/lti_mindtree.html
+++ b/lti_mindtree.html
@@ -50,15 +50,16 @@
 			<img src="images/image.png">
 		</div>
 		
-		<h3>ExactSpace</h3>
+		<h3>LTIMindtree</h3>
 
-		<p>A SaaS product that provides a platform to energy generation power plants to enhance efficiency and prevent downtime of it's assets.
+		<p>A global technology consulting and digital solutions company that enables enterprises across industries to
+			reimagine business models, accelerate innovation, and maximize growth by harnessing digital technologies
 		<br>
 		<br>
 		
-		<h5>SDET</h5>
+		<h5>Data Engineer</h5>
 		
-		<p>Automated the deployment of a data center using Ansible, reducing the time taken from 30 days to 20 minutes.
+		<p>Data Migration from Teradata into Snowflake ecosystem.
 		<br>
 		<br>
 
@@ -94,8 +95,8 @@
 		<h5>Technologies:</h5>
 		<ul>
 			<li>- Python</li>
-			<li>- Robot Framework</li>
-			<li>- SQL Server</li>
+			<li>- BMC ControlM</li>
+			<li>- Oracle SQL</li>
 			<li>- Shell Scripting</li>
 		</ul>
 
