added modified girhub profile image

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 				
 				<div class="social-links">
-					<img id="social_img" src="images/follow.jpg">
+					<img id="social_img" src="images/github_profile.png">
 					<h3>Find me on Github and LinkedIn</h3>
 
 					<a target="_blank" href="https://github.com/rdiavlo">Github: @RavindraM</a>
