--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 					<h4>TOP EXPERTISE</h4>
 
-					<p> <a target="_blank" href="images/resume.pdf">Download Resume</a></p>
+					<p> <a target="_blank" href="static/My Resume-25_01_13.pdf">Download Resume</a></p>
 
 					<div id="skills">
 						<ul>
@@ -122,7 +122,7 @@
 
 				
 				<div class="social-links">
-					<img id="social_img" src="images/github_profile.png">
+					<img id="social_img" src="static/images/github_profile.png">
 					<h3>Find me on Github and LinkedIn</h3>
 
 					<a target="_blank" href="https://github.com/rdiavlo">Github: @RavindraM</a>
