added changes to ltimindtree.html

--- a/lti_mindtree.html
+++ b/lti_mindtree.html
@@ -52,41 +52,25 @@
 			reimagine business models, accelerate innovation, and maximize growth by harnessing digital technologies
 		<br>
 		<br>
-		
-		<h5>Data Engineer</h5>
-		
-		<p>Data Migration from Teradata into Snowflake ecosystem.
-		<br>
-		<br>
 
-		<h5>Technologies:</h5>
-		<ul>
-			<li>- Python</li>
-			<li>- Robot Framework</li>
-			<li>- Ansible</li>
-			<li>- Shell Scripting</li>
-		</ul>
-
-		<h5>Intern</h5>
+		<h5>Sr. Data Engineer</h5>
 		
-		<p>Deployed a data center's infrastructure such as it's dependencies, various components of UI, client data integration, and client-side data access, ensuring successful configuration and optimization of servers, load balancer, Docker Swarm Manager, MQTT broker, caching server, and Grafana.
-		<br>
-		<br>
-		Wrangled and migrated 40GB of historical sensor data from client's machinery to the company's local time series database KairosDB by extracting it from a distributed file system, ensuring the data is organized, easily accessible, and can be used for future analysis and insights.		
-		<br>
-		<br>
-		Automated API testing for a product using Robot Framework, scheduled report generation on Jenkins, enabling the company to promptly identify and fix API or service issues before customers are affected.		
-		<br>
-		<br>
-		Automated the generation of a comprehensive report for over 50,000 sensors, improving efficiency and enabling timely detection of sensor issues.
-		<br>
-		<br>
-		Deployed a multi-node/master-slave Jenkins setup with replication strategy for improved scalability and availability. Configured necessary software components, tested failover scenarios, and documented the setup for the operations team.
-		<br>
-		<br>
-		Automated DCOM configuration using PowerShell scripting, resulting in significant time and cost savings for the company by eliminating the need to send developers for software installation and deployment.
-		<br>
-		<br>
+		Working in capacity to migrate client data from ODC sources systems (Oracle, Teradata, HANA, Flat Files,
+		Snowflake) into Big Query data and Snowflake date warehouses. Ensuring data consistency and accuracy to meet
+		the client deliverables. <br><br>
+		<br><br>
+		<br> Handled structure changes, history data fixation in production environment through incidents, CR's and
+		ERMO release cycles thus ensuring controlled change propagation with minimal disruptions.<br><br>
+		<br> Involved in Control M job orchestration, data migrations, data alert analysis, data issues addressed and
+		resolved through incidents/JIRA's while communicating with end users fully capturing their
+		requirements ensuring maximum client satisfaction. <br><br>
+		<br> Formulated knowledge documents, applied framework enhancements in the existing code base, led training
+		sessions on new process flows, automated alert scripts, developed PL/SQL procedures and workflow templates.
+		<br><br>
+		<br> SAST testing through Checkmarx tool performed on the existing python ingestion framework to mitigate
+		security issues. Post identification of issues, security updates were deployed in a controlled manner through
+		environment life cycles to minimize disruptions to production environment and reduce time to delivery.<br><br>
+		<br><br>
 
 		<h5>Technologies:</h5>
 		<ul>
@@ -97,6 +81,8 @@
 		</ul>
 
 	</div>
+
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
