added changes to ltimindtree.html-2

--- a/lti_mindtree.html
+++ b/lti_mindtree.html
@@ -49,12 +49,13 @@
 		<h3>LTIMindtree</h3>
 
 		<p>A global technology consulting and digital solutions company that enables enterprises across industries to
-			reimagine business models, accelerate innovation, and maximize growth by harnessing digital technologies
+			reimagine business models, accelerate innovation, and maximize growth by harnessing digital technologies</p>
 		<br>
 		<br>
 
 		<h5>Sr. Data Engineer</h5>
-		
+
+		<p>
 		Working in capacity to migrate client data from ODC sources systems (Oracle, Teradata, HANA, Flat Files,
 		Snowflake) into Big Query data and Snowflake date warehouses. Ensuring data consistency and accuracy to meet
 		the client deliverables. <br><br>
@@ -71,6 +72,7 @@
 		security issues. Post identification of issues, security updates were deployed in a controlled manner through
 		environment life cycles to minimize disruptions to production environment and reduce time to delivery.<br><br>
 		<br><br>
+		</p>
 
 		<h5>Technologies:</h5>
 		<ul>
