--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="static/images/ravindra nayak photo.jpg">
+					<img id="profile_pic" src="static/images/full length dottore pics - Jan 25 (1).jpg">
 					<h5 style="text-align: center;line-height: 0;">Software Engineer</h5>
 
 					<div id="theme-options-wrapper">
